    for a relationship from a subclass - the "where 
    type in (x, y, z)" only gets placed on the inside,
    instead of repeatedly.
    
  - When using from_self() with single table inheritance,
    the "where type in (x, y, z)" is placed on the outside
    of the query only, instead of repeatedly.   May make
    some more adjustments to this.

- engine
   
   - Fixed a regression in 0.6.4 whereby the change that
     allowed cursor errors to be raised consistently broke
     the result.lastrowid accessor.   Test coverage has
     been added for result.lastrowid.   Note that lastrowid
     is only supported by Pysqlite and some MySQL drivers,
     so isn't super-useful in the general case.
     
0.6.4
=====
- orm
  - The name ConcurrentModificationError has been
    changed to StaleDataError, and descriptive 
    error messages have been revised to reflect
    exactly what the issue is.   Both names will
    remain available for the forseeable future
    for schemes that may be specifying 
    ConcurrentModificationError in an "except:"
    clause.

  - Added a mutex to the identity map which mutexes
    remove operations against iteration methods,
    which now pre-buffer before returning an 
    iterable.   This because asyncrhonous gc 
    can remove items via the gc thread at any time.
    [ticket:1891]
    
  - The Session class is now present in sqlalchemy.orm.*.
    We're moving away from the usage of create_session(),
    which has non-standard defaults, for those situations
    where a one-step Session constructor is desired. Most
    users should stick with sessionmaker() for general use,
    however.
  
  - query.with_parent() now accepts transient objects
    and will use the non-persistent values of their pk/fk
    attributes in order to formulate the criterion.  
    Docs are also clarified as to the purpose of with_parent().
    
  - The include_properties and exclude_properties arguments
    to mapper() now accept Column objects as members in 